SancionamientoAmbiental funcional en cliente y empleado, todo sierviendo